# kunobi-oidc

./: .gitignore  .mise.toml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: parse_authorized_key.rs  parse_ssh_auth_header.rs  split_header_params.rs  verify_dpop_proof.rs
mutants.out/: caught.txt  lock.json  mutants.json  outcomes.json  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json
mutants.out.old/diff/: src__server__jwks.rs_line_299_col_9.diff  src__server__jwks.rs_line_305_col_9.diff  src__server__ssh.rs_line_104_col_5.diff  src__server__ssh.rs_line_104_col_5_001.diff  src__server__ssh.rs_line_104_col_5_002.diff  src__server__ssh.rs_line_110_col_13.diff  src__server__ssh.rs_line_111_col_29.diff  src__server__ssh.rs_line_114_col_20.diff  src__server__ssh.rs_line_114_col_20_001.diff  src__server__ssh.rs_line_114_col_20_002.diff  src__server__ssh.rs_line_122_col_8.diff  src__server__ssh.rs_line_51_col_5.diff  src__server__ssh.rs_line_62_col_51.diff  src__server__ssh.rs_line_62_col_75.diff  src__server__ssh.rs_line_62_col_90.diff  src__server__ssh.rs_line_63_col_39.diff  src__server__ssh.rs_line_63_col_39_001.diff  src__server__ssh.rs_line_69_col_17.diff  src__server__ssh.rs_line_70_col_17.diff  src__server__ssh.rs_line_71_col_17.diff  src__server__ssh.rs_line_72_col_17.diff
mutants.out/diff/: src__server__jwks.rs_line_213_col_17.diff  src__server__jwks.rs_line_213_col_17_001.diff  src__server__jwks.rs_line_213_col_17_002.diff  src__server__jwks.rs_line_213_col_5.diff  src__server__jwks.rs_line_213_col_5_001.diff  src__server__jwks.rs_line_226_col_21.diff  src__server__jwks.rs_line_226_col_21_001.diff  src__server__jwks.rs_line_226_col_21_002.diff  src__server__jwks.rs_line_226_col_5.diff  src__server__jwks.rs_line_226_col_5_001.diff  src__server__jwks.rs_line_227_col_27.diff  src__server__jwks.rs_line_228_col_11.diff  src__server__jwks.rs_line_228_col_27.diff  src__server__jwks.rs_line_228_col_30.diff  src__server__jwks.rs_line_297_col_5.diff  src__server__jwks.rs_line_300_col_9.diff  src__server__jwks.rs_line_301_col_9.diff  src__server__jwks.rs_line_302_col_9.diff  src__server__jwks.rs_line_303_col_9.diff  src__server__jwks.rs_line_304_col_9.diff  src__server__jwks.rs_line_306_col_9.diff  src__server__jwks.rs_line_307_col_9.diff  src__server__ssh.rs_line_100_col_31.diff  src__server__ssh.rs_line_100_col_31_001.diff  src__server__ssh.rs_line_111_col_5.diff  src__server__ssh.rs_line_111_col_5_001.diff  src__server__ssh.rs_line_111_col_5_002.diff  src__server__ssh.rs_line_117_col_13.diff  src__server__ssh.rs_line_118_col_29.diff  src__server__ssh.rs_line_121_col_20.diff  src__server__ssh.rs_line_121_col_20_001.diff  src__server__ssh.rs_line_121_col_20_002.diff  src__server__ssh.rs_line_129_col_8.diff  src__server__ssh.rs_line_199_col_13.diff  src__server__ssh.rs_line_199_col_13_001.diff  src__server__ssh.rs_line_199_col_13_002.diff  src__server__ssh.rs_line_199_col_5.diff  src__server__ssh.rs_line_199_col_5_001.diff  src__server__ssh.rs_line_51_col_5.diff  src__server__ssh.rs_line_63_col_17.diff  (+8 more)
src/: auth.rs  config.rs  discovery.rs  lib.rs  oidc.rs  store.rs  token.rs
src/client/: config.rs  mod.rs  oidc.rs  session.rs  ssh.rs  store.rs  tofu.rs
src/common/: error.rs  identity.rs  rules.rs  status.rs
src/server/: audit.rs  configured.rs  dpop.rs  jwks.rs  layer.rs  middleware.rs  mod.rs  ssh.rs
tests/: e2e_dex.rs  proptest_jwt.rs  proptest_parsers.rs
