[package]
name = "kunobi-auth"
version = "0.5.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
description = "Authentication framework for Kunobi services — OIDC login, JWT validation, token management"
repository = "https://github.com/kunobi-ninja/kunobi-auth"
keywords = ["oidc", "authentication", "jwt", "kubernetes", "operator"]
categories = ["authentication", "web-programming"]

[features]
default = ["client", "server"]
client = ["open", "dirs", "tempfile", "sysinfo"]
server = []

[dependencies]
# HTTP / Web
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower = "0.5"
http = "1"

# OIDC
openidconnect = "4.0"
oauth2 = "5.0"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT validation (server)
jsonwebtoken = "9"

# Browser (client)
open = { version = "5", optional = true }

# Dirs (client)
dirs = { version = "6", optional = true }

# Atomic file writes for client TOFU + token stores
tempfile = { version = "3", optional = true }

# Cross-platform process introspection — used by `client::session` to
# derive the parent shell PID (per-shell session state) and to garbage-
# collect session files whose owning shell has exited. Picks up
# different OS-specific implementations behind a portable API so the
# same code works on Linux, macOS, and Windows. Minimum feature set
# (just process listings) — we don't read disk/cpu/network.
sysinfo = { version = "0.38", default-features = false, features = ["system"], optional = true }

# Time
chrono = { version = "0.4", features = ["serde"] }

# SSH key parsing
ssh-key = { version = "0.6", features = ["ed25519", "alloc", "rand_core"] }
ssh-encoding = "0.2"
sha2 = "0.10"

# Encoding
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
ssh-agent-client-rs = "1.1.2"

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["test-util"] }
rand_core = { version = "0.6", features = ["getrandom"] }
tempfile = "3"
# Property-based testing for parsers + boundaries.
proptest = "1.5"
